fixed nav highlighting, google analytics, jquery issue, and skip to main content contrast issue

--- a/styles.css
+++ b/styles.css
@@ -52,8 +52,8 @@ a.skip-main {
   z-index:-999;
 }
 a.skip-main:focus, a.skip-main:active {
-  color: #fff;
-  background-color:#000;
+  color: black;
+  background-color:white;
   left: auto;
   top: auto;
   width: 30%;
@@ -64,7 +64,7 @@ a.skip-main:focus, a.skip-main:active {
   border-radius: 15px;
   border:4px solid yellow;
   text-align:center;
-  font-size:1.2em;
+  font-size:1.5rem;
   z-index:999;
 }
 .nav a.current {
